fixed on mobiles, more imporvements, production ready!

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -493,6 +493,13 @@ textarea {
       z-index: 5;
 
 
+      @media only screen and (max-width: 1150px) {
+        & {
+          // 
+        }
+      }
+
+
       &.-newlh {
         & a, & span {
           line-height: 449px;
@@ -512,6 +519,20 @@ textarea {
       &.-small {
         & a {
           line-height: 210px;
+
+          @media only screen and (max-width: 500px) {
+            & {
+              line-height: 20px;
+              margin-top: 50%;
+              padding: 0 10px; 
+            }
+          }
+
+          @media only screen and (max-width: 400px) {
+            & {
+              margin-top: 60%;
+            }
+          }
         }
       }
 
@@ -843,4 +864,12 @@ textarea {
 
 .poptrox-popup {
   padding-bottom: 0;
+}
+
+
+
+.modal_feedback {
+  div.wpcf7 {
+    padding: 0 0 0 1.5em;
+  }
 }
